--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
+    <script
+      src="https://kit.fontawesome.com/484106856b.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- displays site properly based on user's device -->
 
     <link
@@ -16,37 +20,57 @@
     <title>
       Frontend Mentor | Huddle landing page with single introductory section
     </title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <div class="container">
+      <!-- left grid -->
+
       <div class="container-1">
         <div class="logo">
           <img src="./images/logo.svg" alt="" srcset="" />
         </div>
+        <div class="showcase">
+          <img
+            src="./images/illustration-mockups.svg"
+            alt="illustration"
+            srcset=""
+          />
+        </div>
+      </div>
+
+      <!-- right grid -->
+
+      <div class="container-2">
+        <div class="copy">
+          <h1>
+            Build The Community Your Fans Will Love
+          </h1>
+          <p>
+            Huddle re-imagines the way we build communities. You have a voice,
+            but so does your audience. Create connections with your users as you
+            engage in genuine discussion.
+          </p>
+        </div>
+
+        <!-- buttons -->
+        <button>
+          Register
+        </button>
+
+        <!-- social media icons -->
+        <div class="icons">
+          <i class="fa fa-facebook-square" aria-hidden="true"></i>
+          <i class="fa fa-twitter-square" aria-hidden="true"></i>
+          <i class="fab fa-instagram-square"></i>
+        </div>
       </div>
     </div>
-
-    Build The Community Your Fans Will Love Huddle re-imagines the way we build
-    communities. You have a voice, but so does your audience. Create connections
-    with your users as you engage in genuine discussion. Register
-
     <footer>
       <p class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="#">Seye Olajuyin</a>.
       </p>
     </footer>
   </body>
